--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
         <script src="bower_components/bootstrap-sass/js/bootstrap-scrollspy.js"></script>
         <script src="bower_components/bootstrap-sass/js/bootstrap-collapse.js"></script>
         <script src="bower_components/bootstrap-sass/js/bootstrap-tab.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
