--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+<!--    <title></title>-->
+    <title ng-bind="$state.current.name + ' - ui-router'">ui-router</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -15,6 +16,7 @@
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
 </head>
+<!--Include the module with the app scope-->
   <body ng-app="appverseClientIncubatorApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -25,22 +27,49 @@
       <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+<!--    This is the unnamed root, aka index.html
+        where we can populate *any* view within *any* 
+        ancestor state.-->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+          <div class="container">
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
+            <!-- ui-sref is a directive from ui-router for linking a state location with an anchor link.
+                 We should almost always use ui-sref instead of href on our links when we want
+                 then to navigate to a state. When this link is clicked it will take the application
+                 to the 'home' state. Behind the scenes the directive also adds the correct href attr
+                 and url. -->
+            <a class="brand" ui-sref="home">Appverse Web HTML5</a>
+            <ul class="nav">
 
-    <script src="bower_components/jquery/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
+            <!-- Here you can see ui-sref in action again. Also notice the use of $state.includes, which
+                 will set the links to 'active' if, for example on the first link, 'contacts' or any of
+                 its descendant states are activated. -->
+              <li ng-class="{ active: $state.includes('topics') }"><a ui-sref="topics.list">Topics</a></li>
+              <li ng-class="{ active: $state.includes('about') }"><a ui-sref="about">About</a></li>
+            </ul>
+
+            <!-- Here is a named ui-view (ui-view="hint"). ui-views don't have to be named, but we'll be populate this
+                 on from various different child states and we want a name to help us target. -->
+<!--            <p ui-view="hint" class="navbar-text pull-right"></p>-->
+          </div>
+      </div>
+    </div>
+
+    <!-- Here is the main ui-view (it is unnamed).
+         It replaces the default Angular's ng-view directive.
+         It will be populate by its immediate children's templates/views unless otherwise 
+         explicitly named views are targeted.
+         It's also employing the ng-animate directive.
+         For example: <div ui-view ng-animate="{enter:'fade-enter'}"> -->
+    <div ui-view class="container" style="margin-top:60px" ng-animate="{enter:'fade-enter'}"></div>
+    
+
+
+        <script src="bower_components/jquery/jquery.js"></script>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/modernizr/modernizr.js"></script>
 
         <!-- build:js scripts/plugins.js -->
         <script src="bower_components/bootstrap-sass/js/bootstrap-affix.js"></script>
@@ -63,11 +92,15 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/app-factory.js"></script>
+        <script src="scripts/app-states.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
+        
 </body>
 </html>
