--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,11 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     
   <head>
+    <title ng-bind="$state.current.name">Appverse Web HTML5 Incubator</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title ng-bind="$state.current.name + ' - ui-router'">ui-router</title>
     <meta name="description" content="">
+    <meta name="" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
