--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,13 @@
                  will set the links to 'active' if, for example on the first link, 'contacts' or any of
                  its descendant states are activated. -->
               <li ng-class="{ active: $state.includes('topics') }"><a ui-sref="topics.list">Dev. Topics</a></li>
-              <li ng-class="{ active: $state.includes('ui') }"><a ui-sref="ui">UI Demo</a></li>
+              <li ng-class="{ active: $state.includes('ui') }"><a ui-sref="ui">Gadgets</a></li>
+<!--
+              <li ng-class="{ active: $state.includes('restintegration') }"><a ui-sref="restintegration">REST Integration</a></li>
+              <li ng-class="{ active: $state.includes('serverpush') }"><a ui-sref="serverpush">Server Messages</a></li>
+              <li ng-class="{ active: $state.includes('translation') }"><a ui-sref="translation">Translation</a></li>
+              <li ng-class="{ active: $state.includes('charts') }"><a ui-sref="charts">Charts</a></li>
+-->
               <li ng-class="{ active: $state.includes('about') }"><a ui-sref="about">About</a></li>
             </ul>
 
@@ -101,9 +107,28 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="bower_components/angular-socket-io/socket.js"></script>
+        <script src="bower_components/ng-oauth/dist/ng-oauth.js"></script>
+        <script src="bower_components/ngstorage/ngStorage.js"></script>
+        <script src="bower_components/restangular/src/restangular.js"></script>
+        <script src="bower_components/angular-translate/angular-translate.js"></script>
         <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <!-- build:js({.tmp,app}) scripts/api.js -->
+<!--
+        <script src="scripts/api/modules/api-main.js"></script>
+        <script src="scripts/api/modules/api-rest.js"></script>
+        <script src="scripts/api/modules/api-logging.js"></script>
+        <script src="scripts/api/modules/api-detection.js"></script>
+        <script src="scripts/api/modules/api-cache.js"></script>
+        <script src="scripts/api/modules/api-translate.js"></script>
+        <script src="scripts/api/modules/api-serverpush.js"></script>
+        <script src="scripts/api/modules/api-security.js"></script>
+        <script src="scripts/api/configuration/api-configuration.js"></script>
+-->
+        <!-- endbuild -->
+
+        <!-- build:js({.tmp,app}) scripts/app.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/app-controllers.js"></script>
         <script src="scripts/controllers/ui-b-controllers.js"></script>
