- Added angular-dynamic-locale plugin

--- a/app/index.html
+++ b/app/index.html
@@ -114,7 +114,7 @@
         <script src="bower_components/restangular/src/restangular.js"></script>
         <script src="bower_components/angular-translate/angular-translate.js"></script>
         <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
-        <script src="i18n/angular-locale_ja.js"></script>
+        <script src="bower_components/angular-dynamic-locale/src/tmhDinamicLocale.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/api.js -->
