- Added Cache view - Added underscore dependency - Uncommented api-cache.js

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
                  its descendant states are activated. -->
               <li ng-class="{ active: $state.includes('topics') }"><a ui-sref="topics.list">Dev. Topics</a></li>
               <li ng-class="{ active: $state.includes('ui') }"><a ui-sref="ui">Gadgets</a></li>
-<!--              <li ng-class="{ active: $state.includes('restintegration') }"><a ui-sref="restintegration">REST Integration</a></li>-->
+              <li ng-class="{ active: $state.includes('cache') }"><a ui-sref="cache">Cache</a></li>
 <!--              <li ng-class="{ active: $state.includes('serverpush') }"><a ui-sref="serverpush">Server Messages</a></li>-->
               <li ng-class="{ active: $state.includes('translation') }"><a ui-sref="translation">Translation</a></li>
 <!--              <li ng-class="{ active: $state.includes('charts') }"><a ui-sref="charts">Charts</a></li>-->
@@ -110,6 +110,7 @@
         <script src="bower_components/angular-socket-io/socket.js"></script>
         <script src="bower_components/ng-oauth/dist/ng-oauth.js"></script>
         <script src="bower_components/ngstorage/ngStorage.js"></script>
+        <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/restangular/src/restangular.js"></script>
         <script src="bower_components/angular-translate/angular-translate.js"></script>
         <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
@@ -117,12 +118,12 @@
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/api.js -->
-<!--
-        <script src="scripts/api/modules/api-main.js"></script>
+<!--        <script src="scripts/api/modules/api-main.js"></script>-->
+        <script src="scripts/api/modules/api-cache.js"></script>
         <script src="scripts/api/modules/api-rest.js"></script>
+<!--
         <script src="scripts/api/modules/api-logging.js"></script>
         <script src="scripts/api/modules/api-detection.js"></script>
-        <script src="scripts/api/modules/api-cache.js"></script>
 -->
         <script src="scripts/configuration/api-configuration.js"></script>
         <script src="scripts/api/modules/api-translate.js"></script>
