- Changed import of underscore due to lodash - Removed unused angular-resource and underscore components - Updated restangular to 1.2.0 to fix handling promises

--- a/app/index.html
+++ b/app/index.html
@@ -110,7 +110,7 @@
         <script src="bower_components/angular-socket-io/socket.js"></script>
         <script src="bower_components/ng-oauth/dist/ng-oauth.js"></script>
         <script src="bower_components/ngstorage/ngStorage.js"></script>
-        <script src="bower_components/underscore/underscore.js"></script>
+        <script src="bower_components/lodash/dist/lodash.underscore.js"></script>
         <script src="bower_components/restangular/src/restangular.js"></script>
         <script src="bower_components/angular-translate/angular-translate.js"></script>
         <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
