- Replaced unity.js with newer appverse.js - Changed Cache tab to load state1 state - Included cache-directives.js

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
                  its descendant states are activated. -->
               <li ng-class="{ active: $state.includes('topics') }"><a ui-sref="topics.list">Dev. Topics</a></li>
               <li ng-class="{ active: $state.includes('ui') }"><a ui-sref="ui">Gadgets</a></li>
-              <li ng-class="{ active: $state.includes('cache') }"><a ui-sref="cache">Cache</a></li>
+              <li ng-class="{ active: $state.includes('cache') }"><a ui-sref="cache.state1">Cache</a></li>
               <li ng-class="{ active: $state.includes('detection') }"><a ui-sref="detection">Detection</a></li>
               <li ng-class="{ active: $state.includes('serverpush') }"><a ui-sref="serverpush">Server Messages</a></li>
               <li ng-class="{ active: $state.includes('translation') }"><a ui-sref="translation">Translation</a></li>
@@ -131,9 +131,10 @@
         <script src="scripts/api/modules/api-translate.js"></script>
         <script src="scripts/api/modules/api-serverpush.js"></script>
         <script src="scripts/api/modules/api-security.js"></script>
+        <script src="scripts/api/directives/cache-directives.js"></script>
         <script src="scripts/api/directives/rest-directives.js"></script>
         <script src="scripts/configuration/api-configuration.js"></script>
-        <script src="js/unity.js"></script>
+        <script src="js/appverse.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/app.js -->
