--- a/app/index.html
+++ b/app/index.html
@@ -78,8 +78,9 @@
      -->
     <div ui-view class="container" style="margin-top:60px" ng-animate="{enter:'fade-enter'}"></div>
 
-
+    
         <!-- build:js scripts/external.js -->
+        <script src="https://plus.google.com/js/client:plusone.js"></script>
         <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/modernizr/modernizr.js"></script>
@@ -107,7 +108,6 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-        <script src="bower_components/ng-oauth/dist/ng-oauth.js"></script>
         <script src="bower_components/ngstorage/ngStorage.js"></script>
         <script src="bower_components/lodash/dist/lodash.underscore.js"></script>
         <script src="bower_components/restangular/src/restangular.js"></script>
@@ -131,6 +131,7 @@
         <script src="scripts/api/modules/api-translate.js"></script>
         <script src="scripts/api/modules/api-serverpush.js"></script>
         <script src="scripts/api/modules/api-security.js"></script>
+        <script src="scripts/api/modules/api-utils.js"></script>
         <script src="scripts/api/directives/cache-directives.js"></script>
         <script src="scripts/api/directives/rest-directives.js"></script>
         <script src="scripts/configuration/api-configuration.js"></script>
@@ -139,6 +140,7 @@
 
         <!-- build:js({.tmp,app}) scripts/app.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/controllers/security-controllers.js"></script>
         <script src="scripts/controllers/topics-controllers.js"></script>
         <script src="scripts/controllers/gadgets-controllers.js"></script>
         <script src="scripts/controllers/cache-controllers.js"></script>
