--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
-        <script src="bower_components/angular-resource/angular-resource.js"></script>
+<!--        <script src="bower_components/angular-resource/angular-resource.js"></script>-->
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
