Included changes for IndexedDB cache.

--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,7 @@
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
     <script src="bower_components/angular-dynamic-locale/src/tmhDinamicLocale.js"></script>
     <script src="bower_components/angular-cache/dist/angular-cache.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
 
     <!-- Temporary solution based on CDN. For development purpose only -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
