TMENU-56 - Added angular-animate, angular-touch and angular-route - Removed manifest to ease development - Added jQM and angular-jqm CSS - Added Mobile tab - Added jQM page - Removed commented amgular-resource, socket.io and appverse - Added mobile-controllers.js -

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,8 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" manifest="cache.manifest">
+<!--<html class="no-js" manifest="cache.manifest">-->
+<html class="no-js">
 <!--<![endif]-->
 
 <head>
@@ -17,9 +18,9 @@
 
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/jquery.mobile.css">
+    <link rel="stylesheet" href="styles/angular-jqm.css">
     <!-- endbuild -->
-
-
 
 </head>
 <!--Include the module with the app scope-->
@@ -34,58 +35,61 @@
       <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-
-    <!-- HEADER/NAVIGATION BAR
+    <div jqm-page>
+        <!-- HEADER/NAVIGATION BAR
      This is the unnamed root, aka index.html
      You can place here your views in the ui-view points.
     -->
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
+        <div class="navbar navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container">
 
-                <!-- ui-sref is a directive from ui-router for linking a state location with an anchor link.
+                    <!-- ui-sref is a directive from ui-router for linking a state location with an anchor link.
                  We should almost always use ui-sref instead of href on our links when we want
                  then to navigate to a state. When this link is clicked it will take the application
                  to the 'home' state. Behind the scenes the directive also adds the correct href attr
                  and url. -->
-                <a class="brand" ui-sref="home">Appverse Web HTML5</a>
-                <ul class="nav">
+                    <a class="brand" ui-sref="home">Appverse Web HTML5</a>
+                    <ul class="nav">
 
-                    <!-- Here you can see ui-sref in action again. Also notice the use of $state.includes, which
+                        <!-- Here you can see ui-sref in action again. Also notice the use of $state.includes, which
                  will set the links to 'active' if, for example on the first link, 'contacts' or any of
                  its descendant states are activated. -->
-                    <li ng-class="{ active: $state.includes('topics') }">
-                        <a ui-sref="topics.list">Dev. Topics</a>
-                    </li>
-                    <li ng-class="{ active: $state.includes('ui') }">
-                        <a ui-sref="ui">Gadgets</a>
-                    </li>
-                    <li ng-class="{ active: $state.includes('cache') }">
-                        <a ui-sref="cache.state1">Cache</a>
-                    </li>
-                    <li ng-class="{ active: $state.includes('detection') }">
-                        <a ui-sref="detection">Detection</a>
-                    </li>
-                    <li ng-class="{ active: $state.includes('serverpush') }">
-                        <a ui-sref="serverpush">Server Messages</a>
-                    </li>
-                    <li ng-class="{ active: $state.includes('translation') }">
-                        <a ui-sref="translation">Translation</a>
-                    </li>
-                    <!--              <li ng-class="{ active: $state.includes('charts') }"><a ui-sref="charts">Charts</a></li>-->
-                    <li ng-class="{ active: $state.includes('about') }">
-                        <a ui-sref="about">About</a>
-                    </li>
-                </ul>
+                        <li ng-class="{ active: $state.includes('topics') }">
+                            <a ui-sref="topics.list">Dev. Topics</a>
+                        </li>
+                        <li ng-class="{ active: $state.includes('ui') }">
+                            <a ui-sref="ui">Gadgets</a>
+                        </li>
+                        <li ng-class="{ active: $state.includes('cache') }">
+                            <a ui-sref="cache.state1">Cache</a>
+                        </li>
+                        <li ng-class="{ active: $state.includes('detection') }">
+                            <a ui-sref="detection">Detection</a>
+                        </li>
+                        <li ng-class="{ active: $state.includes('mobile') }">
+                            <a ui-sref="mobile">Mobile</a>
+                        </li>
+                        <li ng-class="{ active: $state.includes('serverpush') }">
+                            <a ui-sref="serverpush">Server Messages</a>
+                        </li>
+                        <li ng-class="{ active: $state.includes('translation') }">
+                            <a ui-sref="translation">Translation</a>
+                        </li>
+                        <!--              <li ng-class="{ active: $state.includes('charts') }"><a ui-sref="charts">Charts</a></li>-->
+                        <li ng-class="{ active: $state.includes('about') }">
+                            <a ui-sref="about">About</a>
+                        </li>
+                    </ul>
 
-                <!-- Here is a named ui-view (ui-view="hint"). ui-views don't have to be named, but we'll be populate this
+                    <!-- Here is a named ui-view (ui-view="hint"). ui-views don't have to be named, but we'll be populate this
                  on from various different child states and we want a name to help us target. -->
-                <p ui-view="hint" class="navbar-text pull-left"></p>
+                    <p ui-view="hint" class="navbar-text pull-left"></p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- MAIN INSERTION POINT
+        <!-- MAIN INSERTION POINT
          Here is the main ui-view (it is unnamed) as the main content insertion point.
          It replaces the default Angular's ng-view directive.
          It will be populate by its immediate children's templates/views unless otherwise
@@ -93,14 +97,15 @@
          It's also employing the ng-animate directive.
          For example: <div ui-view ng-animate="{enter:'fade-enter'}">
      -->
-    <div ui-view class="container" style="margin-top:60px" ng-animate="{enter:'fade-enter'}"></div>
-
+        <div ui-view class="container" style="margin-top:60px" ng-animate="{enter:'fade-enter'}"></div>
+    </div>
 
     <!-- build:js scripts/external.js -->
     <script src="https://plus.google.com/js/client:plusone.js"></script>
+
+    <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/uibootstrap.js -->
@@ -121,7 +126,6 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
-    <!--        <script src="bower_components/angular-resource/angular-resource.js"></script>-->
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -135,12 +139,9 @@
 
     <!-- Temporary solution based on CDN. For development purpose only -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
-
-    <!--<script src="bower_components/socket.io/lib/socket.js"></script>-->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/api.js -->
-    <!--    <script src="js/appverse.js"></script>-->
     <script src="scripts/api/modules/api-cache.js"></script>
     <script src="scripts/api/modules/api-configuration.js"></script>
     <script src="scripts/api/modules/api-detection.js"></script>
@@ -164,6 +165,7 @@
     <script src="scripts/controllers/detection-controllers.js"></script>
     <script src="scripts/controllers/servermessages-controllers.js"></script>
     <script src="scripts/controllers/translation-controllers.js"></script>
+    <script src="scripts/controllers/mobile-controllers.js"></script>
     <script src="scripts/factories/app-factory.js"></script>
     <script src="scripts/states/app-states.js"></script>
     <!-- endbuild -->
