TMENU-71 - Add highlight for html/markup and Javascript

--- a/app/index.html
+++ b/app/index.html
@@ -164,6 +164,7 @@
 
     <!-- build:js({.tmp,app}) scripts/app.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/api/plunker.js"></script>
     <script src="scripts/controllers/security-controllers.js"></script>
     <script src="scripts/controllers/topics-controllers.js"></script>
     <script src="scripts/controllers/gadgets-controllers.js"></script>
