First ws implementation

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,9 @@
                     <li ng-class="{ active: $state.includes('serverpush') }">
                         <a ui-sref="serverpush">Server Push</a>
                     </li>
+                     <li ng-class="{ active: $state.includes('websockets') }">
+                        <a ui-sref="websockets">WS</a>
+                    </li>
                     <li ng-class="{ active: $state.includes('translation') }">
                         <a ui-sref="translation">Translation</a>
                     </li>
