--- a/app/index.html
+++ b/app/index.html
@@ -82,8 +82,11 @@
                     <li ng-class="{ active: $state.includes('serverpush') }">
                         <a ui-sref="serverpush">Server Push</a>
                     </li>
-                     <li ng-class="{ active: $state.includes('websockets') }">
+<!--                     <li ng-class="{ active: $state.includes('websockets') }">
                         <a ui-sref="websockets">WS</a>
+                    </li>-->
+                    <li ng-class="{ active: $state.includes('cpu') }">
+                        <a ui-sref="cpu">CPU</a>
                     </li>
                     <li ng-class="{ active: $state.includes('translation') }">
                         <a ui-sref="translation">Translation</a>
@@ -115,6 +118,12 @@
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
+    
+    <script src="api/lib/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="api/lib/jquery.cookie.min.js"></script>
+    <script src="api/lib/jquery.flot.resize.min.js"></script>
+    <script src="api/lib/jquery.flot.time.min.js"></script>
+    <script src="api/lib/jquery.flot.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/uibootstrap.js -->
